update objectID classes table

--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -323,7 +323,7 @@
                         <td>
                             <p>reserved</p>
                         </td>
-                        <td></td>
+                        <td>n/a</td>
                         <td>
                             1024 - 2047
                         </td>
@@ -436,7 +436,7 @@
                     </tr>                     
                 </tbody>
                 <caption>
-                    Note: Final allocation of objectIDs will be done by OMNA Staff
+                    Note: Final allocation of objectIDs will be done by OMNA Staff.
                 </caption>
             </table>
         </div>
