add URN to company reserved

--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -385,7 +385,7 @@
                             <p>x</p>
                         </td>
                         <td>
-                            <p>n/a</p>
+                            <p><code>urn:oma:lwm2m:x:&lt;id&gt;:&lt;version&gt;</code></p>
                         </td>
                         <td>
                             32769 - 42768
