Insert GA4 code
The previous Google Analytics code/system has been decommissioned by Google.
This is the new GA4 tag.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 <head>
+<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-PLCFH76');</script>
+<!-- End Google Tag Manager -->
     <title>Open Mobile Alliance - Specifications</title>
     <meta charset="utf-8">
     <!-- Font Awesome -->
@@ -20,6 +27,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PLCFH76"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- This gets populated with the header.html using Javascript -->
     <div id="header"></div>
     <div class="container">
