update menu and guest policy

--- a/header.html
+++ b/header.html
@@ -82,10 +82,10 @@
         </div>
         <div class="feedback-item">
             <div>
-                <a href="https://app.e2ma.net/app2/audience/signup/1851375/1798794/" target="_blank">Watch/Unwatch</a>
+                <a href="/guest.shtml" target="_blank">Guest Policy</a>
             </div>
             <div>
-                <small>Follow us!</small>
+                <small>Join us!</small>
             </div>
         </div>
     </nav>
