update index with explanation text

--- a/index.html
+++ b/index.html
@@ -32,30 +32,45 @@
     <div class="container">
         <div>
             <h1>
-                OMA Specifications
+                OMA Specifications: Two Paths to Expore
             </h1>
         </div>
         <div>
-            <p>OMA Releases are made up of different types of Specifications which are publicly available from this portal.</p>
-            <p>OMA Releases are published in two phases:</p>
+          <h2>Unlonk the Power of OMA's Enablers</h2>
+            <p>With a robust collection of over 220 Enablers, each backed by multiple release versions, OMA empowers you with an array of possibilities. 
+              Delve into the wealth of information using our two distinct search methods:</p>
             <ul>
-                <li>Candidate Release (-C) – As soon as the documents making up the Release have been approved by OMA, they are published as a Candidate Release. </li>
-                <li>Approved Release (-A) – When a Candidate Release has undergone a period of public comment and completed any applicable interoperability testing then it is published as an Approved Release.</li>
+              <li><h3>Exploring Publications</h3></li>
+                <ul>
+                  <li>Effortlessly navigate Enablers and their documentation using advanced filters for refining searches by criteria such as 
+                    "Enabler Name," "Version," and more. Alternatively, delve deep into content using keywords.</li>
+                </ul>
+              <li><h3>Unveiling Release Resources</h3></li>
+                <ul>
+                  <li>Discover dedicated resources for each Enabler Release by entering related keywords. Streamline your 
+                    search and access targeted information quickly.</li>
+                </ul> 
             </ul>
         </div>
         <div>
-          <h2>Publications</h2>
+          <h2>Exploring Publications</h2>
           <div class="publications-description">
-            <p>The table below list the OMA publications.</p>
+            <p>Navigate through our Enablers and their extensive documentation effortlessly. Our dynamic table lets you 
+              seamlessly sift through the 220 Enablers, equipped with the option of <em>Advance filtering</em>. 
+              Tailor your search by refining Enablers based on criteria like <em>Enabler Name</em>, <em>Version</em>, <em>Status</em>, 
+              <em>Publication Year</em>, and <em>Document Type</em>. Alternatively, dive deep into the contents using keywords within 
+              the document's <em>Scope</em>.</p>
             <div x-data="publicationsTable" x-html="render()">
               <!-- dynamic Publications table -->
             </div>
           </div>
         </div>
         <div>
-          <h2>Releases</h2>
+          <h2>Unveiling Release Resources</h2>
           <div class="publications-description">
-            <p>The table below lists the Releases that OMA has published.</p>
+            <p>Uncover the dedicated resources for each Enabler Release through this unique search feature. 
+              Simply input <em>keywords</em> associated with the <em>Enabler Name</em>, and witness a comprehensive breakdown of 
+              allocated resources. This efficient search method streamlines your quest for information.</p></br>
             <div id="enablers-table">
               <!-- dynamic  Enablers Table -->
             </div>
