--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
           <h2>Unlonk the Power of OMA's Enablers</h2>
             <p>With a robust collection of over 220 Enablers, each backed by multiple release versions, OMA empowers you with an array of possibilities. 
               Delve into the wealth of information using our two distinct search methods:</p>
+            
+          <h3>Exploring Publications</h3>
             <ul>
-              <li><h3>Exploring Publications</h3></li>
-                <ul>
-                  <li>Effortlessly navigate Enablers and their documentation using advanced filters for refining searches by criteria such as 
-                    "Enabler Name," "Version," and more. Alternatively, delve deep into content using keywords.</li>
-                </ul>
-              <li><h3>Unveiling Release Resources</h3></li>
-                <ul>
-                  <li>Discover dedicated resources for each Enabler Release by entering related keywords. Streamline your 
-                    search and access targeted information quickly.</li>
-                </ul> 
+              <li>Effortlessly navigate Enablers and their documentation using advanced filters for refining searches by criteria such as 
+                "Enabler Name," "Version," and more. Alternatively, delve deep into content using keywords.</li>
             </ul>
+          <h3>Unveiling Release Resources</h3>
+            <ul>
+              <li>Discover dedicated resources for each Enabler Release by entering related keywords. Streamline your 
+                search and access targeted information quickly.</li>
+            </ul>
+            
         </div>
         <div>
           <h2>Exploring Publications</h2>
