improve the language

--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
             </h1>
         </div>
         <div>
-          <h2>Unlonk the Power of OMA's Enablers</h2>
-            <p>With a robust collection of over 220 Enablers, each backed by multiple release versions, OMA empowers you with an array of possibilities. 
+            <p><strong>Unlock the Power of OMA's Enablers</strong>: with a robust collection of over 220 Enablers, each backed by multiple release versions, OMA empowers you with an array of possibilities. 
               Delve into the wealth of information using our two distinct search methods:</p>
             
           <h3>Exploring Publications</h3>
             <ul>
               <li>Effortlessly navigate Enablers and their documentation using advanced filters for refining searches by criteria such as 
-                "Enabler Name," "Version," and more. Alternatively, delve deep into content using keywords.</li>
+                <em>Enabler Name</em>, <em>Version</em>, and more. Alternatively, delve deep into content using <em>keywords</em>.</li>
             </ul>
           <h3>Unveiling Release Resources</h3>
             <ul>
@@ -56,7 +55,7 @@
           <h2>Exploring Publications</h2>
           <div class="publications-description">
             <p>Navigate through our Enablers and their extensive documentation effortlessly. Our dynamic table lets you 
-              seamlessly sift through the 220 Enablers, equipped with the option of <em>Advance filtering</em>. 
+              seamlessly sift through the 220 Enablers, equipped with the option of <strong><em>Advance filtering</em></strong>. 
               Tailor your search by refining Enablers based on criteria like <em>Enabler Name</em>, <em>Version</em>, <em>Status</em>, 
               <em>Publication Year</em>, and <em>Document Type</em>. Alternatively, dive deep into the contents using keywords within 
               the document's <em>Scope</em>.</p>
