update advance filtering

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               seamlessly sift through the 220 Enablers, equipped with the option of <strong><em>Advance filtering</em></strong>. 
               Tailor your search by refining Enablers based on criteria like <em>Enabler Name</em>, <em>Version</em>, <em>Status</em>, 
               <em>Publication Year</em>, and <em>Document Type</em>. Alternatively, dive deep into the contents using keywords within 
-              the document's <em>Scope</em>.</p>
+              the document's <em>Scope</em>. Click on <strong><em>Advance filtering</em></strong> to delve into a powerful search.</p>
             <div x-data="publicationsTable" x-html="render()">
               <!-- dynamic Publications table -->
             </div>
