--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               Tailor your search by refining Enablers based on criteria like <em>Enabler Name</em>, <em>Version</em>, <em>Status</em>, 
               <em>Publication Year</em>, and <em>Document Type</em>. Alternatively, dive deep into the contents using keywords within 
               the document's <em>Scope</em>. Click on <strong><em>Advance filtering</em></strong> to delve into a powerful search.</p>
+              <p><em>Note: The publications listed in this table are the <strong>Approved</strong> versions for each OMA Enabler and the latest <strong>Candidates</strong> for Release <em>Versions</em> that still need approval.</em></p>
             <div x-data="publicationsTable" x-html="render()">
               <!-- dynamic Publications table -->
             </div>
@@ -67,9 +68,11 @@
         <div>
           <h2>Unveiling Release Resources</h2>
           <div class="publications-description">
-            <p>Uncover the dedicated resources for each Enabler Release through this unique search feature. 
+            <p>Uncover the dedicated <em>Resources</em> for each Enabler Release through this unique search feature. 
               Simply input <em>keywords</em> associated with the <em>Enabler Name</em>, and witness a comprehensive breakdown of 
-              allocated resources. This efficient search method streamlines your quest for information.</p></br>
+              allocated resources. This efficient search method streamlines your quest for information.</p>
+              <p><em>Note: The publications in this table contain ALL the <em>Resources</em> for <strong>Approved</strong>, <strong>Candidate</strong>, and <strong>Historic</strong> OMA Enabler Releases published by OMA over the years.</em></p>
+            </br>
             <div id="enablers-table">
               <!-- dynamic  Enablers Table -->
             </div>
