--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <em>Publication Year</em>, and <em>Document Type</em>. Alternatively, dive deep into the contents using keywords within 
               the document's <em>Scope</em>. Click on <strong><em>Advance filtering</em></strong> to delve into a powerful search.</p>
               <p><em>Note: The publications listed in this table are the <strong>Approved</strong> versions for each OMA Enabler and the latest <strong>Candidates</strong> for Release <em>Versions</em> that still need approval.</em></p>
+              <p><em>Note: Within the Enabler filter column, the assigned number for each Enabler represents the number of associated Documents for that search.</em></p>
             <div x-data="publicationsTable" x-html="render()">
               <!-- dynamic Publications table -->
             </div>
