add id to link dynamic table

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             
         </div>
         <div>
-          <h2>Exploring Publications</h2>
+          <h2 id="exploring-publications">Exploring Publications</h2>
           <div class="publications-description">
             <p>Navigate through our Enablers and their extensive documentation effortlessly. Our dynamic table lets you 
               seamlessly sift through the 220 Enablers, equipped with the option of <strong><em>Advance filtering</em></strong>. 
