feat: fix #149 - change caption of objects table

--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -311,7 +311,7 @@
             { key: 'version', title: 'Version', type: 'text' },
           ]
 
-          objectTable.caption=`<a href="http://devtoolkit.openmobilealliance.org/OEditor/Register" title="click here to register a new (ext-label) Object ID">Register a new Object produced by a 3rd party SDO (Standards Development Organization</a>`
+          objectTable.caption=`Objects in the above table (oma-label) are only registraged by OMA Working Groups via an internal process, called OMNA.`
 
           // clear data store
           $.ajax({
