fix: #153 see old and new formats of LwM2MRegistry page

--- a/OMNA/LwM2M/LwM2MRegistry-old.html
+++ b/OMNA/LwM2M/LwM2MRegistry-old.html
@@ -262,14 +262,19 @@
         </div>
     </div>
     <div class="container">
-        <div>
-            <h1>
-                OMA LightweightM2M (LwM2M) Object and Resource Registry
-            </h1>
-            <div id="omna-info">
-            </div>
+      <div class="row">
+        <h1>
+          OMA LightweightM2M (LwM2M) Object and Resource Registry
+        </h1>
+        <div id="omna-info">
         </div>
-        <div>
+       </div>
+      <div class="row">
+        <div class="pull-right">
+         <a class="btn btn-default" href="./LwM2MRegistry.html" role="button">New interface >></a> 
+        </div>
+      </div>
+      <div class="row">
           <h2>
             ObjectID Classes
           </h2>
