--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -55,12 +55,17 @@
     </div>
     <!-- Main content -->
     <div class="container">
-      <div class="my-5">
+      <div class="row my-5">
         <h1>
           OMA LightweightM2M (LwM2M) Object and Resource Registry
         </h1>
       </div>
-      <nav>
+      <div class="row">
+        <div class="pull-right">
+         <a class="btn btn-default" href="./LwM2MRegistry-old.html" role="button">Old interface >></a>
+        </div>
+      </div>
+      <nav class="row">
         <ul class="nav nav-tabs" id="nav-tab">
           <li id="nav-information-tab"
             class="active show"
