--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -300,7 +300,7 @@
           // configure the ObjectID table
           const objectTable = document.getElementById('objectid-table')
           objectTable.columns = [
-            { key: 'urn', title: 'URN / Verson', type: 'text', format: '', class: ''},
+            { key: 'urn', title: 'URN / Verson', type: 'text', format: '', class: '', search: true},
             { key: 'xmlLink', title: 'XML Name', type: 'function', format: window.formatObjectTableDDFLinkXmlCell, class: 'text-center'},
             { key: 'xmlEditor', title: 'LwM2M Editor', type: 'function', format: window.formatObjectTableDDFEditorLinkCell, class: 'text-center'},
             { key: 'name', title: 'Object Name', type: 'text', format: '', class: '', search: true},
@@ -443,11 +443,11 @@
           resourceidTable.columns = [
             { key: 'resourceID', title: 'ResourceID*', type: 'text', format: '', class: 'text-center', search: true },
             { key: 'resourceName', title: 'Name/Technical Spec*', type: 'function', format: window.formatResourceIdTableTSLinkCell, search: true },
-            { key: 'accessType', title: 'Operation*', type: 'text', format: '', class: 'text-center', search: false },
-            { key: 'type', title: 'Type*', type: 'text', format: '', class: 'text-center', search: false },
-            { key: 'range', title: 'Range/Enumeration*', type: 'text', format: '', class: 'text-center', search: false },
-            { key: 'units', title: 'Units*', type: 'text', format: '', class: 'text-center', search: false },
-            { key: 'submitter', title: 'Submitter', type: 'text', format: '', search: false },
+            { key: 'accessType', title: 'Operation*', type: 'text', format: '', class: 'text-center', search: true },
+            { key: 'type', title: 'Type*', type: 'text', format: '', class: 'text-center', search: true },
+            { key: 'range', title: 'Range/Enumeration*', type: 'text', format: '', class: 'text-center', search: true },
+            { key: 'units', title: 'Units*', type: 'text', format: '', class: 'text-center', search: true },
+            { key: 'submitter', title: 'Submitter', type: 'text', format: '', search: true },
             { key: 'description', title: 'Description', type: 'text', format: '', search: true },
           ]
 
