--- a/OMNA/LwM2M/LwM2MRegistry-old.html
+++ b/OMNA/LwM2M/LwM2MRegistry-old.html
@@ -125,9 +125,9 @@
 
             $('#header').load("../../header.html");
             $('#footer').load("../../footer.html");
-            $('#omna-info').load("./_OMNAInformation.html");
-            $('#objectid-classes').load("./_ObjectIDClasses.html");
-            $('#resourceid-classes').load("./_ResourceIDClasses.html");
+            $('#omna-info').load("OMNAInformation.html");
+            $('#objectid-classes').load("ObjectIDClasses.html");
+            $('#resourceid-classes').load("ResourceIDClasses.html");
 
             const {githubAuth} = window.localStorage;
 
