--- a/OMNA/LwM2M/LwM2MRegistry.html
+++ b/OMNA/LwM2M/LwM2MRegistry.html
@@ -238,10 +238,10 @@
       $(document).ready(() => {
         $('#header').load("../../header.html");
         $('#footer').load("../../footer.html");
-        $('#nav-information').load("./_OMNAInformation.html").tab('show');
+        $('#nav-information').load("OMNAInformation.html").tab('show');
 
-        $('#objectid-classes').load("./_ObjectIDClasses.html");
-        $('#resourceid-classes').load("./_ResourceIDClasses.html");
+        $('#objectid-classes').load("ObjectIDClasses.html");
+        $('#resourceid-classes').load("ResourceIDClasses.html");
       })
 
     </script>
