--- a/OMNA/LwM2M/LwM2MRegistry-old.html
+++ b/OMNA/LwM2M/LwM2MRegistry-old.html
@@ -125,9 +125,9 @@
 
             $('#header').load("../../header.html");
             $('#footer').load("../../footer.html");
-            $('#omna-info').load("./_OMNAInformation.html");
-            $('#objectid-classes').load("./_ObjectIDClasses.html");
-            $('#resourceid-classes').load("./_ResourceIDClasses.html");
+            $('#omna-info').load("OMNAInformation.html");
+            $('#objectid-classes').load("ObjectIDClasses.html");
+            $('#resourceid-classes').load("ResourceIDClasses.html");
 
             const {githubAuth} = window.localStorage;
 
@@ -271,7 +271,7 @@
        </div>
       <div class="row">
         <div class="pull-right">
-         <a class="btn btn-default" href="./LwM2MRegistry.html" role="button">New interface >></a> 
+         <a class="btn btn-default" href="./LwM2MRegistry.html" role="button">New interface >></a>
         </div>
       </div>
       <div class="row">
